--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,11 @@
     type="text/javascript"
     src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=37885c5d1e4edc0bd7f3a41a8c23872b&autoload=false&libraries=services"
   ></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
+  <script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQAXNR2leohogYaE68RNn7LvwFwQK5Ybo&libraries=places"
+  async
+  defer
+></script>
 
   <!--
       This HTML file is a template.
