--- a/public/index.html
+++ b/public/index.html
@@ -30,15 +30,11 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-    <script
-    type="text/javascript"
-    src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=37885c5d1e4edc0bd7f3a41a8c23872b&autoload=false&libraries=services"
-  ></script>
-  <script
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQAXNR2leohogYaE68RNn7LvwFwQK5Ybo&libraries=places"
-  async
-  defer
-></script>
+  <script type="text/javascript"
+    src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=37885c5d1e4edc0bd7f3a41a8c23872b&autoload=false&libraries=services"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnk3sJQ5_YrcdA55ngkaZtO0ao0h8NFvE&libraries=places"
+    async defer></script>
+
 
   <!--
       This HTML file is a template.
